[package]
name = "honest-android-games"
version = "0.1.0"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
edition = "2018"

[dependencies]
failure = "^0.1"
log = "^0.4"
env_logger = "^0.7"
walkdir = "^2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"

[dependencies.handlebars]
version = "3.0.0-beta.4"
features = ["dir_source"]
