[package]
name = "hagen"
version = "0.1.0"
authors = ["Jens Reimann <ctron@dentrassi.de>"]
edition = "2018"

[dependencies]
failure = "^0.1"
log = "^0.4"
env_logger = "^0.7"
walkdir = "^2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"
jsonpath_lib = "^0.2"
pulldown-cmark = "0.6.1"
fs_extra = "1.1"
url = "2"
pathdiff = "0.1"
relative-path = "1.0"

[dependencies.handlebars]
version = "=3.0.0-beta.4"
features = ["dir_source"]
